# accQT

./: .clang-format  .gitignore  AppButton.cpp  CMakeLists.txt  INSTALL.md  README.md  accQT.h  accQT.py  cathegories.cpp  license.txt  main.cpp  main.h  mainwindow.cpp  mainwindow.h
src/: CMakeLists.txt  accQT.cpp  accQT.h  app.cpp  app.h  appfield.cpp  appfield.h  cathegorie.cpp  cathegorie.h  main.cpp  mainwindow.cpp  mainwindow.h  module.cpp  module.h  proto.cpp  proto.h
